refactor: Update project metadata and SEO
This commit updates the project name, description, and associated metadata to accurately reflect the application's focus on sports news. It also refines SEO tags and keywords in the `index.html` to be more specific to sports content, removing references to music. Additionally, minor code cleanups and comments were added for improved clarity in ad loading logic.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-www.radio520.com.br",
+  "name": "portal-de-notícias-esportivas-radio520",
   "private": true,
   "version": "0.0.0",
   "type": "module",
